syntax = 'proto3';

package flower.protocol.switchboard;

enum Right {
  CLIENT_CONNECT = 0;
  EGRESS_START = 1;
  INGRESS_CONNECT = 2;
  RESOLVER_START = 3;
  SERVER_START = 4;
}

message ConstrainRequest {
  // Actions that are permitted to be performed on the new constrained
  // switchboard connection. These rights must be a subset of the rights
  // present on the existing switchboard connection.
  repeated Right rights = 1;

  // Labels that must be present on any incoming requests for them to be
  // received on the new switchboard connection. This affects
  // EgressStart(), ResolverStart() and ServerStart().
  map<string, string> in_labels = 2;

  // Labels that are automatically added to any outgoing requests. This
  // affects ClientConnect() and IngressConnect().
  map<string, string> out_labels = 3;
}

message ConstrainResponse {
  fd switchboard = 1;
}

message ClientConnectRequest {
  map<string, string> out_labels = 1;
}

message ClientConnectResponse {
  fd server = 1;
  map<string, string> connection_labels = 2;
}

message EgressStartRequest {
  map<string, string> in_labels = 1;
}

message EgressStartResponse {
  fd egress = 1;
}

message IngressConnectRequest {
  fd client = 1;
  map<string, string> out_labels = 2;
}

message IngressConnectResponse {
  map<string, string> connection_labels = 1;
}

message ResolverStartRequest {
  repeated string resolve_labels = 1;
  map<string, string> in_labels = 2;
  map<string, string> out_labels = 3;
}

message ResolverStartResponse {
  fd resolver = 1;
}

message ServerStartRequest {
  map<string, string> in_labels = 2;
}

message ServerStartResponse {
  fd server = 1;
}

service Switchboard {
  rpc Constrain(ConstrainRequest) returns (ConstrainResponse);

  rpc ClientConnect(ClientConnectRequest) returns (ClientConnectResponse);
  rpc EgressStart(EgressStartRequest) returns (EgressStartResponse);
  rpc IngressConnect(IngressConnectRequest) returns (IngressConnectResponse);
  rpc ResolverStart(ResolverStartRequest) returns (ResolverStartResponse);
  rpc ServerStart(ServerStartRequest) returns (ServerStartResponse);
}
